# ChangeLog for net-analyzer/fwlogwatch
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/fwlogwatch/ChangeLog,v 1.20 2009/08/25 22:37:06 jer Exp $

*fwlogwatch-1.1-r1 (25 Aug 2009)

  25 Aug 2009; Jeroen Roovers <jer@gentoo.org> +fwlogwatch-1.1-r1.ebuild,
  +files/fwlogwatch-1.1-make.patch:
  Use CFLAGS from environment (bug #240852). Use LDFLAGS and CC too. Do not
  strip. Use a patch instead of sed.

  02 Jan 2009; Friedrich Oslage <bluebird@gentoo.org> fwlogwatch-1.1.ebuild:
  Stable on sparc, bug #253290

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org> -fwlogwatch-1.0.ebuild:
  Cleanup

  10 Apr 2007; Peter Weller <welp@gentoo.org> fwlogwatch-1.1.ebuild:
  Stable on amd64 wrt bug 173981

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> fwlogwatch-1.1.ebuild:
  x86 stable

  20 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

*fwlogwatch-1.1 (01 Jul 2006)

  01 Jul 2006; Marcelo Goes <vanquirius@gentoo.org> +fwlogwatch-1.1.ebuild:
  1.1 version bump for bug 138734. Thanks to Taku Murakami <murakami.taku at
  gmail dot com>. Also using tc-getCC instead of gcc hardcoded by Makefile.

  01 Mar 2006; Marcelo Goes <vanquirius@gentoo.org>
  -fwlogwatch-0.9.3.ebuild, fwlogwatch-1.0.ebuild:
  Do not install COPYING.

  21 May 2005; Simon Stelling <blubb@gentoo.org> fwlogwatch-1.0.ebuild:
  added ~amd64 keyword

  02 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> -fwlogwatch-0.9.2.ebuild:
  Removing old version.

  16 Aug 2004; Eldad Zack <eldad@gentoo.org> fwlogwatch-1.0.ebuild:
  x86 stable

  16 Jul 2004; David Holm <dholm@gentoo.org> fwlogwatch-1.0.ebuild:
  Added to ~ppc.

*fwlogwatch-1.0 (11 Jul 2004)

  11 Jul 2004; Eldad Zack <eldad@gentoo.org> +metadata.xml,
  +fwlogwatch-1.0.ebuild:
  Version bump. Closes #56320. Thanks to Dinini <dinini@ljones.com>

  21 Aug 2003; Michael Sterrett <msterret@gentoo.org> fwlogwatch-0.9.3.ebuild: