@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/fwlogwatch
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/fwlogwatch/ChangeLog,v 1.20 2009/08/25 22:37:06 jer Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/fwlogwatch/ChangeLog,v 1.21 2010/11/30 21:02:52 jer Exp $
+
+*fwlogwatch-1.2 (30 Nov 2010)
+
+  30 Nov 2010; Jeroen Roovers <jer@gentoo.org> +fwlogwatch-1.2.ebuild:
+  Version bump.
 
 *fwlogwatch-1.1-r1 (25 Aug 2009)
 
